start collecting global utils at the top

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyNqM30BjR+wfxkpO8ZUVo6h",
+      "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
+      "authorship_tag": "ABX9TyPHesRWT64pi960O0j26MbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Global generic utils"
+      ],
+      "metadata": {
+        "id": "NqpSHdZry-H0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def vec_add(v1, v2):\n",
+        "  return tuple(sum(i) for i in zip(v1, v2))\n",
+        "\n",
+        "dirs90 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 and dx == 0 or dy == 0 and dx != 0]\n",
+        "\n",
+        "dirs45 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 or dx != 0]"
+      ],
+      "metadata": {
+        "id": "6gZpKr0ZzFrO"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Day 01, input"
       ],
       "metadata": {
@@ -44,7 +69,7 @@
       "metadata": {
         "id": "SKku640EHqzU"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -66,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "owxfIRB-73TW",
-        "outputId": "f67bdcd9-1067-435c-ac6f-f7543e184870"
+        "outputId": "f7583ee1-cae1-4cad-8e42-f1d90cce0480"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +103,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 45
         }
       ]
     },
@@ -103,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTWKPqpv-Olj",
-        "outputId": "1c12a56a-51c2-40a0-9ed1-1283735a67fd"
+        "outputId": "226bff3f-6f41-4fba-d568-47d7f2aad7c1"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +140,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 46
         }
       ]
     },
@@ -136,7 +161,7 @@
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -160,7 +185,7 @@
       "metadata": {
         "id": "3scnsnVp6oAB"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -184,9 +209,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uChLkyXjJu4Q",
-        "outputId": "a6a62a75-0464-413c-a8c1-841582827b61"
+        "outputId": "464eb271-9978-4b0b-8fb2-ff9120513417"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 49
         }
       ]
     },
@@ -213,7 +238,7 @@
       "cell_type": "code",
       "source": [
         "def check_line(line):\n",
-        "  deltas = [line[n+1] - line[n] for n in range(len(line)-1)]\n",
+        "  deltas = [line[i+1] - line[i] for i in range(len(line)-1)]\n",
         "  return same_sgn(deltas) and delta_max(deltas, 3)\n",
         "\n",
         "def remove1(line):\n",
@@ -230,9 +255,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_RiahZiKqp7",
-        "outputId": "2600fcc5-b2b3-4c57-d77b-0ac98f351d55"
+        "outputId": "1dd8358d-7e95-4013-c2cc-429bba81813c"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 50
         }
       ]
     },
@@ -263,16 +288,16 @@
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 03, part 1, find mul(x,y) sequences, multiply and add"
+        "Day 03, utils"
       ],
       "metadata": {
-        "id": "ctTUKUfAlLvJ"
+        "id": "8OPwaByp2goY"
       }
     },
     {
@@ -288,8 +313,17 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 03, part 1, find mul(x,y) sequences, multiply and add"
+      ],
+      "metadata": {
+        "id": "ctTUKUfAlLvJ"
+      }
     },
     {
       "cell_type": "code",
@@ -302,9 +336,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efd76bc8-73ae-4a1f-e1a6-bf024245e8fe"
+        "outputId": "30e03cef-1442-4a3f-e081-748fca3f01c8"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 53
         }
       ]
     },
@@ -353,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "fe09d019-a5c4-40ed-acff-c8ea7b190042"
+        "outputId": "60fa6c4f-c045-41e8-c6ce-0048a5c48385"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 54
         }
       ]
     },
@@ -388,7 +422,7 @@
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -403,44 +437,30 @@
     {
       "cell_type": "code",
       "source": [
-        "def vec_add(v1, v2):\n",
-        "  return tuple(sum(i) for i in zip(v1, v2))"
-      ],
-      "metadata": {
-        "id": "rd_M-0ru6yPa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def in_range(p):\n",
-        "  r, c = p\n",
-        "  return r >= 0 and r < rows and c >= 0 and c < cols\n",
+        "  y, x = p\n",
+        "  return y >= 0 and y < rows and x >= 0 and x < cols\n",
         "\n",
         "def check_char(p, char):\n",
-        "  r, c = p\n",
-        "  return in_range(p) and input04[r][c] == char\n",
+        "  y, x = p\n",
+        "  return in_range(p) and input04[y][x] == char\n",
         "\n",
         "def check(s, p, d):\n",
         "  return s == \"\" or check_char(p, s[0]) and check(s[1:], vec_add(p, d), d)\n",
         "\n",
-        "deltas = [(dr, dc) for dr in [-1, 0, 1] for dc in [-1, 0, 1] if dr != 0 or dc != 0]\n",
-        "\n",
         "def count_xmas(p):\n",
-        "  return sum(1 for d in deltas if check(\"XMAS\", p, d))\n",
+        "  return sum(1 for d in dirs45 if check(\"XMAS\", p, d))\n",
         "\n",
-        "sum(count_xmas((r, c)) for r in range(rows) for c in range(cols))"
+        "sum(count_xmas((y, x)) for y in range(rows) for x in range(cols))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "26d7f73c-ecb0-430e-e898-69c7c65ac5e5"
+        "outputId": "9dfea041-f15f-43fd-d208-d19af73ea7e5"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +470,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 58
         }
       ]
     },
@@ -482,15 +502,15 @@
         "\n",
         "# variant without range check\n",
         "def check_char_unsafe(p, char):\n",
-        "  r, c = p\n",
-        "  return input04[r][c] == char\n",
+        "  y, x = p\n",
+        "  return input04[y][x] == char\n",
         "\n",
         "def check_pattern(p, pattern):\n",
         "  return all(check_char_unsafe(vec_add(p, d), char) for (d, char) in pattern)\n",
         "\n",
         "# Search for A within (1, 1)...(rows-1, cols-1) and check match for all patterns\n",
         "sum(1\n",
-        "    for p in [(r, c) for r in range(1, rows-1) for c in range(1, cols-1) if input04[r][c] == 'A']\n",
+        "    for p in [(y, x) for y in range(1, rows-1) for x in range(1, cols-1) if input04[y][x] == 'A']\n",
         "    for pattern in patterns if check_pattern(p, pattern))"
       ],
       "metadata": {
@@ -498,9 +518,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vAxUvNhOjoOZ",
-        "outputId": "cc07ac72-1758-44d8-dfd3-e23bf265361e"
+        "outputId": "8c4d5f9b-ea3a-4038-d482-194b95d32c3a"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +530,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 59
         }
       ]
     },
@@ -528,13 +548,13 @@
       "source": [
         "input05 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input05.txt')]\n",
         "split_index = input05.index('')\n",
-        "rules = [tuple(int(x) for x in rule.split('|')) for rule in input05[:split_index]]\n",
-        "updates = [[int(x) for x in update.split(',')] for update in input05[split_index+1:]]"
+        "rules = [tuple(int(n) for n in rule.split('|')) for rule in input05[:split_index]]\n",
+        "updates = [[int(n) for n in update.split(',')] for update in input05[split_index+1:]]"
       ],
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -549,9 +569,10 @@
     {
       "cell_type": "code",
       "source": [
-        "def verify_pair(first, second):\n",
-        "  existing_rules = [rule for rule in rules if first in rule and second in rule]\n",
-        "  return not existing_rules or any(rule[0] == first and rule[1] == second for rule in existing_rules)\n",
+        "def verify_pair(left, right):\n",
+        "  \"\"\"if a rule exists, check order against it, otherwise pass\"\"\"\n",
+        "  existing_rules = [rule for rule in rules if left in rule and right in rule]\n",
+        "  return not existing_rules or any(rl == left and rr == right for rl, rr in existing_rules)\n",
         "\n",
         "def verify_update(update):\n",
         "  return all(verify_pair(update[i], update[j]) for i in range(len(update)-1) for j in range(i+1, len(update)))"
@@ -559,13 +580,13 @@
       "metadata": {
         "id": "3Ze94NW_zPJo"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 05, part 1, find correct updates"
+        "Day 05, part 1, find correct updates, sum up middle their elements"
       ],
       "metadata": {
         "id": "8lU7RtCR7Pbd"
@@ -581,9 +602,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qWoawq4o4l6v",
-        "outputId": "f061eace-1607-4a6a-b7ee-cb6fc2f90cd3"
+        "outputId": "a1e09cca-fbe2-435b-f429-50a96ac19f87"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,14 +614,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 62
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 05, part 2, fix updates which break the rules"
+        "Day 05, part 2, fix updates which break the rules, sum up their middle elements"
       ],
       "metadata": {
         "id": "xlrgyrB7-6T_"
@@ -627,9 +648,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3hdrfwD-5uA",
-        "outputId": "6b613d96-6018-487d-c1b7-118e4b7daf62"
+        "outputId": "05f592f2-d985-4880-8f36-0575e3e08312"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,9 +660,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 63
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PGLYU2H4xFAU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
