--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPHesRWT64pi960O0j26MbG",
+      "authorship_tag": "ABX9TyOPsJ0t6ShO5vAIDZPy5R8x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,14 +42,26 @@
         "def vec_add(v1, v2):\n",
         "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
-        "dirs90 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 and dx == 0 or dy == 0 and dx != 0]\n",
+        "dirs45 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 or dx != 0]\n",
         "\n",
-        "dirs45 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 or dx != 0]"
+        "dir_up = (-1, 0)\n",
+        "dir_right = (0, 1)\n",
+        "dir_down = (1, 0)\n",
+        "dir_left = (0, -1)\n",
+        "\n",
+        "dirs90 = [dir_up, dir_right, dir_down, dir_left]\n",
+        "turn_right = {dir_up: dir_right, dir_right: dir_down, dir_down: dir_left, dir_left: dir_up}\n",
+        "turn_left = {dir_up: dir_left, dir_left: dir_down, dir_down: dir_right, dir_right: dir_up}\n",
+        "\n",
+        "def in_range(p, dimensions):\n",
+        "  y, x = p\n",
+        "  height, width = dimensions\n",
+        "  return y >= 0 and y < height and x >= 0 and x < width"
       ],
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -69,7 +81,7 @@
       "metadata": {
         "id": "SKku640EHqzU"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +105,7 @@
         "id": "owxfIRB-73TW",
         "outputId": "f7583ee1-cae1-4cad-8e42-f1d90cce0480"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +142,7 @@
         "id": "MTWKPqpv-Olj",
         "outputId": "226bff3f-6f41-4fba-d568-47d7f2aad7c1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +173,7 @@
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +197,7 @@
       "metadata": {
         "id": "3scnsnVp6oAB"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +223,7 @@
         "id": "uChLkyXjJu4Q",
         "outputId": "464eb271-9978-4b0b-8fb2-ff9120513417"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +269,7 @@
         "id": "F_RiahZiKqp7",
         "outputId": "1dd8358d-7e95-4013-c2cc-429bba81813c"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +300,7 @@
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +325,7 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +350,7 @@
         },
         "outputId": "30e03cef-1442-4a3f-e081-748fca3f01c8"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +401,7 @@
         "id": "IloCNlgql80L",
         "outputId": "60fa6c4f-c045-41e8-c6ce-0048a5c48385"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,12 +429,13 @@
       "source": [
         "input04 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]\n",
         "rows = len(input04)\n",
-        "cols = len(input04[0])"
+        "cols = len(input04[0])\n",
+        "dimensions = (rows, cols)"
       ],
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": 57,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -437,13 +450,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def in_range(p):\n",
-        "  y, x = p\n",
-        "  return y >= 0 and y < rows and x >= 0 and x < cols\n",
-        "\n",
         "def check_char(p, char):\n",
         "  y, x = p\n",
-        "  return in_range(p) and input04[y][x] == char\n",
+        "  return in_range(p, dimensions) and input04[y][x] == char\n",
         "\n",
         "def check(s, p, d):\n",
         "  return s == \"\" or check_char(p, s[0]) and check(s[1:], vec_add(p, d), d)\n",
@@ -458,9 +467,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "9dfea041-f15f-43fd-d208-d19af73ea7e5"
+        "outputId": "3e9a7d7c-8c2e-4e4f-cdcb-702d22fe6a4c"
       },
-      "execution_count": 58,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 6
         }
       ]
     },
@@ -520,7 +529,7 @@
         "id": "vAxUvNhOjoOZ",
         "outputId": "8c4d5f9b-ea3a-4038-d482-194b95d32c3a"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +563,7 @@
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +589,7 @@
       "metadata": {
         "id": "3Ze94NW_zPJo"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +613,7 @@
         "id": "qWoawq4o4l6v",
         "outputId": "a1e09cca-fbe2-435b-f429-50a96ac19f87"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +659,7 @@
         "id": "e3hdrfwD-5uA",
         "outputId": "05f592f2-d985-4880-8f36-0575e3e08312"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,9 +675,77 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Day 06, input\n",
+        "input06 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input06_example.txt')]\n",
+        "height = len(input06)\n",
+        "width = len(input06[0])\n",
+        "dimensions = (height, width)\n",
+        "start = [(y, x) for y in range(height) for x in range(width) if input06[y][x] == '^'][0]"
+      ],
+      "metadata": {
+        "id": "14BPsXpkMxlv"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 06, part 1, visisted cells"
+      ],
+      "metadata": {
+        "id": "CQSuREG4NiLi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir = dir_up\n",
+        "p = start\n",
+        "visited = {p:1}\n",
+        "while(in_range(p, dimensions)):\n",
+        "  next = vec_add(p, dir)\n",
+        "  ny, nx = next\n",
+        "  if in_range(next, dimensions):\n",
+        "    if input06[ny][nx] == '#':\n",
+        "      dir = turn_right[dir]\n",
+        "    else:\n",
+        "      p = next\n",
+        "      visited[p] = visited.get(p, 0) + 1\n",
+        "  else:\n",
+        "    p = next\n",
+        "  if p == start and dir == dir_up:\n",
+        "    print(\"loop\")\n",
+        "    break\n",
+        "len(visited)"
+      ],
+      "metadata": {
+        "id": "QdJqwU6xNns3",
+        "outputId": "ecccd6cc-7276-47ac-d940-ca47a2a9bdb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "41"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PGLYU2H4xFAU"
+        "id": "EUSaUdGeQh0m"
       },
       "execution_count": null,
       "outputs": []
