--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyOPsJ0t6ShO5vAIDZPy5R8x",
+      "authorship_tag": "ABX9TyO2jsyer0rfVraaM0YgXAtz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,12 +56,16 @@
         "def in_range(p, dimensions):\n",
         "  y, x = p\n",
         "  height, width = dimensions\n",
-        "  return y >= 0 and y < height and x >= 0 and x < width"
+        "  return y >= 0 and y < height and x >= 0 and x < width\n",
+        "\n",
+        "def get_cell(p, grid):\n",
+        "  y, x = p\n",
+        "  return grid[y][x]\n"
       ],
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 4,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -435,7 +439,7 @@
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +473,7 @@
         "id": "w2qf355Rw6lx",
         "outputId": "3e9a7d7c-8c2e-4e4f-cdcb-702d22fe6a4c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,8 +515,7 @@
         "\n",
         "# variant without range check\n",
         "def check_char_unsafe(p, char):\n",
-        "  y, x = p\n",
-        "  return input04[y][x] == char\n",
+        "  return get_cell(p, input04) == char\n",
         "\n",
         "def check_pattern(p, pattern):\n",
         "  return all(check_char_unsafe(vec_add(p, d), char) for (d, char) in pattern)\n",
@@ -674,19 +677,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Day 06, input"
+      ],
+      "metadata": {
+        "id": "c6MRgkiLphhx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Day 06, input\n",
-        "input06 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input06_example.txt')]\n",
+        "input06 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input06.txt')]\n",
         "height = len(input06)\n",
         "width = len(input06[0])\n",
         "dimensions = (height, width)\n",
-        "start = [(y, x) for y in range(height) for x in range(width) if input06[y][x] == '^'][0]"
+        "start = [(y, x) for y in range(height) for x in range(width) if get_cell((y, x), input06) == '^'][0]"
       ],
       "metadata": {
         "id": "14BPsXpkMxlv"
       },
-      "execution_count": 27,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -701,51 +712,145 @@
     {
       "cell_type": "code",
       "source": [
-        "dir = dir_up\n",
-        "p = start\n",
-        "visited = {p:1}\n",
-        "while(in_range(p, dimensions)):\n",
-        "  next = vec_add(p, dir)\n",
-        "  ny, nx = next\n",
-        "  if in_range(next, dimensions):\n",
-        "    if input06[ny][nx] == '#':\n",
-        "      dir = turn_right[dir]\n",
+        "def get_visited(grid) -> tuple[list[tuple[tuple[int, int], tuple[int, int]]], bool]:\n",
+        "  dir = dir_up\n",
+        "  p = start\n",
+        "  visited = {(p, dir)}\n",
+        "  while(in_range(p, dimensions)):\n",
+        "    next = vec_add(p, dir)\n",
+        "    if in_range(next, dimensions):\n",
+        "      if get_cell(next, grid) == '#':\n",
+        "        dir = turn_right[dir]\n",
+        "      elif (next, dir) in visited:\n",
+        "        return (visited, True)\n",
+        "      else:\n",
+        "        p = next\n",
+        "        visited.add((p, dir))\n",
         "    else:\n",
-        "      p = next\n",
-        "      visited[p] = visited.get(p, 0) + 1\n",
-        "  else:\n",
-        "    p = next\n",
-        "  if p == start and dir == dir_up:\n",
-        "    print(\"loop\")\n",
-        "    break\n",
-        "len(visited)"
+        "      return (visited, False)\n",
+        "\n",
+        "visited, _ = get_visited(input06)\n",
+        "len({p for (p, dir) in visited})"
       ],
       "metadata": {
         "id": "QdJqwU6xNns3",
-        "outputId": "ecccd6cc-7276-47ac-d940-ca47a2a9bdb8",
+        "outputId": "2dbe8776-a241-4900-e7bf-9d1570d954ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "41"
+              "4711"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 06, part 2, find loops"
+      ],
+      "metadata": {
+        "id": "JZE3hTy7kGux"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mutable = [[c for c in row] for row in input06]\n",
+        "loops = 0\n",
+        "for y in range(height):\n",
+        "  # print(y, loops)\n",
+        "  for x in range(width):\n",
+        "    if get_cell((y, x), input06) == '.':\n",
+        "      mutable[y][x] = '#'\n",
+        "      _, loop = get_visited(mutable)\n",
+        "      loops += loop\n",
+        "      mutable[y][x] = '.'\n",
+        "loops"
+      ],
+      "metadata": {
+        "id": "vilThMk8kFpb",
+        "outputId": "aaeddf86-b39b-418d-fd1e-352a2b22eec5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1562"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 07, input"
+      ],
+      "metadata": {
+        "id": "N5Tv2i1YpcsL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input07 = [\n",
+        "    (int(result.strip()), [int(operand.strip()) for operand in operands.split()])\n",
+        "    for (result, operands) in [[s.strip() for s in line.split(':')] for line in open('drive/MyDrive/AoC/2024/input07_example.txt')]]"
+      ],
+      "metadata": {
+        "id": "EUSaUdGeQh0m"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 07, part 1, find valid equations with '*' and '+'"
+      ],
+      "metadata": {
+        "id": "3k_RnofPsbB2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def check_equation(desired_result, current_result, remaining_operands):\n",
+        "  if not remaining_operands:\n",
+        "    return desired_result == current_result\n",
+        "  if current_result > desired_result:\n",
+        "    return False\n",
+        "  return check_equation(desired_result, current_result + remaining_operands[0], remaining_operands[1:]) or \\\n",
+        "         check_equation(desired_result, current_result * remaining_operands[0], remaining_operands[1:])"
+      ],
+      "metadata": {
+        "id": "2vrLLyYjpcLN"
+      },
+      "execution_count": 60,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EUSaUdGeQh0m"
+        "id": "HLi48dqUtOr5"
       },
       "execution_count": null,
       "outputs": []
