--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyO2jsyer0rfVraaM0YgXAtz",
+      "authorship_tag": "ABX9TyMqE5lvBksZO6s3PgMd407i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -778,11 +778,11 @@
         "loops"
       ],
       "metadata": {
-        "id": "vilThMk8kFpb",
-        "outputId": "aaeddf86-b39b-418d-fd1e-352a2b22eec5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vilThMk8kFpb",
+        "outputId": "aaeddf86-b39b-418d-fd1e-352a2b22eec5"
       },
       "execution_count": 59,
       "outputs": [
@@ -812,12 +812,12 @@
       "source": [
         "input07 = [\n",
         "    (int(result.strip()), [int(operand.strip()) for operand in operands.split()])\n",
-        "    for (result, operands) in [[s.strip() for s in line.split(':')] for line in open('drive/MyDrive/AoC/2024/input07_example.txt')]]"
+        "    for (result, operands) in [[s.strip() for s in line.split(':')] for line in open('drive/MyDrive/AoC/2024/input07.txt')]]"
       ],
       "metadata": {
         "id": "EUSaUdGeQh0m"
       },
-      "execution_count": 58,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -838,22 +838,75 @@
         "  if current_result > desired_result:\n",
         "    return False\n",
         "  return check_equation(desired_result, current_result + remaining_operands[0], remaining_operands[1:]) or \\\n",
-        "         check_equation(desired_result, current_result * remaining_operands[0], remaining_operands[1:])"
+        "         check_equation(desired_result, current_result * remaining_operands[0], remaining_operands[1:])\n",
+        "\n",
+        "sum(desired_result for (desired_result, operands) in input07 if check_equation(desired_result, operands[0], operands[1:]))"
       ],
       "metadata": {
-        "id": "2vrLLyYjpcLN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2vrLLyYjpcLN",
+        "outputId": "19a66d4c-f7b8-4aba-a321-50c6be4c7b48"
       },
-      "execution_count": 60,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4555081946288"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 07, part 2, find valid equations with '*', '+', '||' (concat)"
+      ],
+      "metadata": {
+        "id": "ZI6Yxu_cuWQq"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from math import log10\n",
+        "def check_equation2(desired_result, current_result, remaining_operands):\n",
+        "  if not remaining_operands:\n",
+        "    return desired_result == current_result\n",
+        "  if current_result > desired_result:\n",
+        "    return False\n",
+        "  return check_equation2(desired_result, current_result + remaining_operands[0], remaining_operands[1:]) or \\\n",
+        "         check_equation2(desired_result, current_result * remaining_operands[0], remaining_operands[1:]) or \\\n",
+        "         check_equation2(desired_result, current_result * 10 ** (int(log10(remaining_operands[0])) + 1) + remaining_operands[0], remaining_operands[1:])\n",
+        "\n",
+        "sum(desired_result for (desired_result, operands) in input07 if check_equation2(desired_result, operands[0], operands[1:]))"
+      ],
       "metadata": {
-        "id": "HLi48dqUtOr5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HLi48dqUtOr5",
+        "outputId": "72c87cc8-ade8-4642-8cf2-ac8990acbb92"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "227921760109726"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
     }
   ]
 }
